--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgraund_color"
+    android:background="#EAEAEA"
     tools:context=".MainActivity">
 
     <ImageView
@@ -23,14 +23,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:weightSum="3"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:weightSum="3"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,37 +42,68 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+
             <androidx.cardview.widget.CardView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="190dp"
+                android:layout_height="190dp"
                 android:layout_margin="5dp"
+                android:backgroundTint="@color/splash"
                 android:clickable="true"
-                app:cardCornerRadius="30dp">
+                android:focusable="true"
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="vertical"
+                    android:layout_height="match_parent"
                     android:gravity="center"
-                    android:layout_height="match_parent">
+                    android:orientation="vertical">
+
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/medal"/>
+                        android:src="@drawable/medal" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:fontFamily="@font/lato_black"
                         android:text="General"
-                        />
+                        android:textSize="22sp" />
                 </LinearLayout>
 
 
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="190dp"
+                android:layout_height="190dp"
                 android:layout_margin="5dp"
+                android:backgroundTint="@color/splash"
                 android:clickable="true"
-                app:cardCornerRadius="30dp">
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/bus" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:fontFamily="@font/lato_black"
+                        android:text="General"
+                        android:textSize="22sp" />
+                </LinearLayout>
 
 
             </androidx.cardview.widget.CardView>
@@ -92,21 +122,65 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="200dp"
+                android:layout_width="190dp"
                 android:layout_height="200dp"
                 android:layout_margin="5dp"
+                android:backgroundTint="@color/splash"
                 android:clickable="true"
-                app:cardCornerRadius="30dp">
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/groceries" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:fontFamily="@font/lato_black"
+                        android:text="General"
+                        android:textSize="22sp" />
+                </LinearLayout>
 
 
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="190dp"
+                android:layout_height="190dp"
                 android:layout_margin="5dp"
+                android:backgroundTint="@color/splash"
                 android:clickable="true"
-                app:cardCornerRadius="30dp">
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/shopping_cart" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:fontFamily="@font/lato_black"
+                        android:text="General"
+                        android:textSize="22sp" />
+                </LinearLayout>
 
 
             </androidx.cardview.widget.CardView>
@@ -125,22 +199,65 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="190dp"
+                android:layout_height="190dp"
                 android:layout_margin="5dp"
+                android:backgroundTint="@color/splash"
                 android:clickable="true"
-                app:cardCornerRadius="30dp">
+                app:cardCornerRadius="30dp"
 
+                app:cardElevation="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/video_camera" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:fontFamily="@font/lato_black"
+                        android:text="General"
+                        android:textSize="22sp" />
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="190dp"
+                android:layout_height="190dp"
                 android:layout_margin="5dp"
+                android:backgroundTint="@color/splash"
                 android:clickable="true"
-                app:cardCornerRadius="30dp">
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/increase" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:fontFamily="@font/lato_black"
+                        android:text="General"
+                        android:textSize="22sp" />
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
@@ -161,6 +278,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageView">
 
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -175,12 +293,12 @@
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:icon="@drawable/increase" />
+                android:icon="@drawable/dashboard" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:icon="@drawable/medal" />
+                android:icon="@drawable/groceries" />
         </com.google.android.material.tabs.TabLayout>
 
     </androidx.cardview.widget.CardView>
