--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
 
     <color name="backgraund_color">@android:color/white</color>
 
+    <color name="splash">#7AFFFFFF</color>
+
 
 
 </resources>
